重构: 将包名从 sqlx-plus-core 改为 sqlxplus，整合 derive 到 core 包中
- 重命名 sqlx-plus-core 为 sqlxplus
- 重命名 sqlx-plus-derive 为 sqlxplus-derive
- 在 core 包中重新导出 derive 的所有宏，用户只需依赖 sqlxplus 一个包
- 更新所有示例项目的依赖和导入
- 更新 derive 宏生成的代码路径引用
- 添加 crates.io 所需的元数据

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
-name = "sqlx-plus-core"
+name = "sqlxplus"
 version = "0.1.0"
 edition = "2021"
 authors = ["fangbc5@163.com"]
 license = "MIT OR Apache-2.0"
-description = "Core library for sqlx-plus"
+description = "A powerful SQL query builder and ORM for sqlx with CRUD operations"
+repository = "https://github.com/yourusername/sqlxplus"
+keywords = ["sqlx", "orm", "database", "query-builder", "crud"]
+categories = ["database", "web-programming"]
 
 [dependencies]
 sqlx = { workspace = true }
@@ -12,6 +15,8 @@ tokio = { workspace = true }
 async-trait = { workspace = true }
 thiserror = { workspace = true }
 serde = { workspace = true }
+# 引入 derive 包，以便重新导出宏
+sqlxplus-derive = { path = "../derive" }
 
 [features]
 default = ["mysql", "postgres", "sqlite"]
