--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["fangbc5@163.com"]
 license = "MIT OR Apache-2.0"
 description = "A powerful SQL query builder and ORM for sqlx with CRUD operations"
-repository = "https://github.com/yourusername/sqlxplus"
+repository = "https://github.com/fangbc5/sqlx-plus"
 keywords = ["sqlx", "orm", "database", "query-builder", "crud"]
 categories = ["database", "web-programming"]
 
