--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,7 +16,8 @@ async-trait = { workspace = true }
 thiserror = { workspace = true }
 serde = { workspace = true }
 # 引入 derive 包，以便重新导出宏
-sqlxplus-derive = { path = "../derive" }
+# 本地开发时使用 path，发布到 crates.io 时使用版本号
+sqlxplus-derive = { version = "0.1.0", path = "../derive" }
 
 [features]
 default = ["mysql", "postgres", "sqlite"]
