--- a/examples/postgres_example/Cargo.toml
+++ b/examples/postgres_example/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [dependencies]
 # 只依赖 sqlx-plus-core，它会自动传递 sqlx-plus-derive 并重新导出宏
 sqlxplus = { path = "../../core", features = ["postgres"] }
+test_models = { path = "../test_models" }
 async-trait = { workspace = true }
 sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "chrono", "postgres"] }
 tokio = { version = "1.40", features = ["full"] }
