--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 authors = ["fangbc5@163.com"]
 license = "MIT OR Apache-2.0"
 description = "Code generator for sqlxplus"
+repository = "https://github.com/fangbc5/sqlx-plus"
+keywords = ["sqlx", "orm", "database", "code-generator", "cli", "codegen"]
+categories = ["database", "development-tools", "web-programming"]
+readme = "README.md"
 
 [[bin]]
 name = "sqlxplus-cli"
