--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sqlxplus"
-version.workspace = true
+version = "0.1.4"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
