修复事务生命周期问题

--- a/examples/test_models/Cargo.toml
+++ b/examples/test_models/Cargo.toml
@@ -3,8 +3,14 @@ name = "test_models"
 version.workspace = true
 edition.workspace = true
 
+[features]
+default = ["mysql", "postgres", "sqlite"]
+mysql = []
+postgres = []
+sqlite = []
+
 [dependencies]
-sqlxplus = { path = "../../core" }
+sqlxplus = { path = "../../core", default-features = false, features = ["mysql", "postgres", "sqlite"] }
 async-trait = { workspace = true }
 sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "chrono", "sqlite", "mysql", "postgres"] }
 serde = { workspace = true }
