--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
 # 数据库
-sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "chrono"], default-features = false }
+sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "chrono", "bigdecimal"], default-features = false }
 
 # 异步运行时
 tokio = { version = "1.40", features = ["full"] }
@@ -30,6 +30,7 @@ thiserror = "2.0.17"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
+bigdecimal = { version = "0.4", features = ["serde"] }
 
 # CLI 工具
 clap = { version = "4.5", features = ["derive"] }
