--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -17,6 +17,7 @@ thiserror = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 chrono = { workspace = true }
+bigdecimal = { workspace = true }
 # 引入 derive 包，以便重新导出宏
 # 本地开发时使用 path，发布到 crates.io 时使用版本号
 sqlxplus-derive = { version = "0.2.5", path = "../derive" }
